--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,9 @@
-TWITTER_API_KEY=ABC123
-TWITTER_API_SECRET_KEY=ABC123
-TWITTER_ACCESS_TOKEN=ABC123
-TWITTER_ACCESS_TOKEN_SECRET=ABC123
-WSURL=wss://mainnet.infura.io/ws/v3/abc123
+TWITTER_API_KEY=abc123
+TWITTER_API_SECRET_KEY=abc123
+TWITTER_ACCESS_TOKEN=abc123
+TWITTER_ACCESS_TOKEN_SECRET=abc123
+TWITTER_MESSAGE_TEMPLATE="Deposit event heard at transaction hash ${transaction_hash}"
+WSURL=wss://mainnet.infura.io/ws/v3/YOUR-PROJECT-ID
+ETHERSCAN_ABI_URL=https://YOUR-api.etherscan.io/api?module=contract&action=getabi&address=
+ETHERSCAN_API_KEY=abc123
+CONTRACT_ADDRESS=0xffffffffffffffffffffffffffffffffffffffff
