--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "node-rest-client-promise": "^3.1.1",
     "twitter": "^1.7.1",
     "web3": "^1.3.5"
   }
