Use array for events.

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,10 @@
-TWITTER_API_KEY=abc123
-TWITTER_API_SECRET_KEY=abc123
-TWITTER_ACCESS_TOKEN=abc123
-TWITTER_ACCESS_TOKEN_SECRET=abc123
-TWITTER_MESSAGE_TEMPLATE="Deposit event heard at transaction hash ${transaction_hash}"
+TWITTER_API_KEY=YOUR-API-KEY
+TWITTER_API_SECRET_KEY=YOUR-API-SECRET
+TWITTER_ACCESS_TOKEN=YOUR-ACCESS-TOKEN
+TWITTER_ACCESS_TOKEN_SECRET=YOUR-TOKEN-SECRET
+TWITTER_MESSAGE_TEMPLATE="${event.event} event heard at transaction hash ${event.transactionHash}, Block number: ${event.blockNumber}"
 WSURL=wss://mainnet.infura.io/ws/v3/YOUR-PROJECT-ID
-ETHERSCAN_ABI_URL=https://YOUR-api.etherscan.io/api?module=contract&action=getabi&address=
-ETHERSCAN_API_KEY=abc123
+ETHERSCAN_ABI_URL=https://api-YOUR-ACCOUNT.etherscan.io/api?module=contract&action=getabi&address=
+ETHERSCAN_API_KEY=YOUR-API-KEY
 CONTRACT_ADDRESS=0xffffffffffffffffffffffffffffffffffffffff
+CONTRACT_EVENTS=Deposit,Withdrawal
